# Numerus

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  SYNTAX.md  USAGE_EXAMPLES.md  _c_h_a_n_g_e_l_o_g_8md_source.html  _l_i_c_e_n_s_e_8md_source.html  _r_e_a_d_m_e_8md_source.html  _s_y_n_t_a_x_8md_source.html  _u_s_a_g_e___e_x_a_m_p_l_e_s_8md_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxyfile  doxyfile_internal  doxyfile_internal.doxygen  doxyfile_public_api.doxygen  doxygen.css  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  main.c  main_8c.html  main_8c.js  main_8c_source.html  md_CHANGELOG.html  md_LICENSE.html  md_SYNTAX.html  md_USAGE_EXAMPLES.html  md__c_h_a_n_g_e_l_o_g.html  md__l_i_c_e_n_s_e.html  navtree.css  navtreedata.js  navtreeindex0.js  numerus.c  numerus.h  (+26 more)
cmake/: build_type.cmake  compiler_flags.cmake
docs/html/: files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  md__c_h_a_n_g_e_l_o_g.html  md__l_i_c_e_n_s_e.html  numerus_8c.html  numerus_8h.html  numerus_8h_source.html  pages.html
docs/html/search/: files_0.js  functions_0.js  variables_0.js
docs/latex/: files.tex  index.tex  md__c_h_a_n_g_e_l_o_g.tex  md__l_i_c_e_n_s_e.tex  numerus_8c.tex  numerus_8h.tex  refman.tex
docs/man/man3/: md__c_h_a_n_g_e_l_o_g.3  md__l_i_c_e_n_s_e.3  numerus.c.3  numerus.h.3
html/: annotated.html  classes.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  md__c_h_a_n_g_e_l_o_g.html  md__l_i_c_e_n_s_e.html  md__r_e_a_d_m_e.html  md__t_o_d_o.html  numerus_8c.html  numerus_8h.html  numerus_8h_source.html  numerus__repl_8c.html  pages.html  structroman__char__struct.html
html/search/: all_2.js  all_4.js  all_5.js  all_6.js  classes_0.js  functions_1.js  functions_2.js  searchdata.js  variables_1.js
inc/: numerus.h
include/: CMakeLists.txt  numerus.h  numerus_error_codes.h
numerus2/: .gitignore  CMakeLists.txt  LICENSE.md  clion_code_style.xml  doxyfile_public_api.doxygen
numerus2/cmake/: build_type.cmake  compiler_flags.cmake  doxygen.cmake
numerus2/include/: numerus.h
numerus2/src/: CMakeLists.txt  allocation.c  analysis.c  constants.c  formatting.c  internal.h  numeral_to_value.c  twelfths.c  value_to_numeral.c
numerus2/test/: numerus_test.c  test.h  test_constants.c  test_int_to_basic.c  test_main.c
search/: all_2.js  all_3.js  all_4.js  all_5.js  defines_0.js  files_1.js  functions_0.js  functions_1.js  search.css  searchdata.js  variables_0.js
src/: CMakeLists.txt  allocation.c  analysis.c  cli.c  constants.c  dictionary.h  formatting.c  internal.h  main.c  numeral_to_value.c  numerus.h  numerus_cli.c  numerus_constants.c  numerus_core.c  numerus_dictionary.h  numerus_error_codes.h  numerus_fmt.c  numerus_fmt_alloc.c  numerus_fraction.c  numerus_from_roman.c  numerus_internal.h  numerus_parse.c  numerus_parse.h  numerus_strutils.c  numerus_test.c  numerus_test.h  numerus_to_roman.c  numerus_to_roman_alloc.c  numerus_twelfths.c  numerus_utils.c  twelfths.c  value_to_numeral.c
src/cli/: main.c  numerus_cli.c
test/: CMakeLists.txt  main.c  numerus_test.c  numerus_test.h  test.h  test_constants.c  test_int_to_basic.c  test_main.c
tst/: atto.h  main.c  numerus_test.h  test_benchmark.c  test_bijectivity.c  test_constants.c  test_fmt.c  test_fraction.c  test_from_int_to_roman.c  test_from_roman_basic.c  test_from_roman_extended.c  test_from_roman_to_int.c  test_roman_from_double.c  test_roman_from_fraction.c  test_roman_from_int.c  test_roman_to_double.c  test_roman_to_fraction.c  test_roman_to_int.c  test_strutils.c  test_to_roman.c  test_to_roman_basic.c  test_to_roman_extended.c  test_to_roman_from_int.c
